tests/int/deps_command/snapshots/integration__int__deps_command__format__should_deps_grouped_depth_1_for_own_crate.snap
---
source: tests/int/deps_command/format.rs
info:
  program: crawk
  args:
    - deps
    - "-f"
    - grouped
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
analyzer (10)
  -> cache
  -> discover
  -> error
  -> graph
  -> model
  -> module_path
  -> parser
  -> reference
  -> resolve
  -> rules

cli (1)
  -> version

discover (4)
  -> cache
  -> constants
  -> module_path
  -> utils

error (1)
  -> discover

format (1)
  -> lib

graph (3)
  -> error
  -> model
  -> reference

lib (7)
  -> analyzer
  -> discover
  -> error
  -> graph
  -> model
  -> reference
  -> rules

logger (1)
  -> cli

main (5)
  -> cli
  -> format
  -> lib
  -> logger
  -> version

model (1)
  -> reference

parser (4)
  -> cache
  -> constants
  -> reference
  -> utils

reference (1)
  -> constants

resolve (5)
  -> cache
  -> discover
  -> module_path
  -> reference
  -> utils

rules (3)
  -> error
  -> graph
  -> module_path

utils (1)
  -> constants

----- stderr -----
