tests/int/deps_command/snapshots/integration__int__deps_command__format__should_deps_grouped_for_fixture_crate.snap
---
source: tests/int/deps_command/format.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - deps
    - "-f"
    - grouped
---
success: true
exit_code: 0
----- stdout -----
advanced_globs (14)
  -> advanced_globs::aliased_module
  -> advanced_globs::enum_variants
  -> advanced_globs::internal
  -> advanced_globs::layer1
  -> advanced_globs::macro_module
  -> advanced_globs::original
  -> advanced_globs::shadowing
  -> advanced_globs::trait_providers
  -> advanced_globs::unix_specific
  -> advanced_globs::windows_specific
  -> dir_module::child_file
  -> file_module
  -> visibility
  -> visibility::pub_mod

advanced_globs::layer1 (1)
  -> advanced_globs::layer1::layer2

advanced_globs::layer1::layer2 (1)
  -> advanced_globs::layer1::layer2::layer3

advanced_globs::prelude (1)
  -> advanced_globs

app (24)
  -> advanced_globs
  -> app_only
  -> dir_module
  -> dir_module::child_dir
  -> dir_module::child_file
  -> file_module
  -> glob_patterns
  -> glob_patterns::constants
  -> glob_patterns::traits
  -> glob_patterns::types
  -> glob_patterns::utilities
  -> glob_showcase
  -> inline_modules
  -> inline_modules::inner
  -> inline_modules::nested::deep
  -> item_visibility
  -> mixed
  -> mixed::file_child
  -> mixed::inline_child
  -> nesting
  -> nesting::level1::level2::level3
  -> reexports
  -> visibility
  -> visibility::pub_mod

baz (1)
  -> foo::bar

custom_path (1)
  -> item_visibility

dir_module (1)
  -> inline_modules::nested::deep

dir_module::child_dir (1)
  -> file_module

dir_module::child_file (1)
  -> dir_module

file_module (1)
  -> nesting

foo (1)
  -> foo::bar

foo::other (1)
  -> foo::bar

glob_patterns (12)
  -> dir_module
  -> dir_module::child_file
  -> file_module
  -> glob_patterns::constants
  -> glob_patterns::mixed_exports
  -> glob_patterns::outer
  -> glob_patterns::self_ref
  -> glob_patterns::set_a
  -> glob_patterns::set_b
  -> glob_patterns::traits
  -> glob_patterns::types
  -> glob_patterns::utilities

glob_patterns::outer (1)
  -> glob_patterns::outer::inner

glob_showcase (12)
  -> file_module
  -> glob_showcase::api
  -> glob_showcase::config::all
  -> glob_showcase::database
  -> glob_showcase::errors
  -> glob_showcase::models
  -> glob_showcase::traits
  -> glob_showcase::utils::collection
  -> glob_showcase::utils::math
  -> glob_showcase::utils::string
  -> inline_modules
  -> nesting::level1::level2

glob_showcase::config::all (3)
  -> glob_showcase::config::client
  -> glob_showcase::config::logging
  -> glob_showcase::config::server

glob_showcase::database (3)
  -> glob_showcase::database::connection
  -> glob_showcase::database::query
  -> glob_showcase::database::transaction

glob_showcase::prelude (7)
  -> glob_showcase
  -> glob_showcase::api
  -> glob_showcase::database
  -> glob_showcase::errors
  -> glob_showcase::models
  -> glob_showcase::traits
  -> glob_showcase::utils::math

glob_showcase::utils (3)
  -> glob_showcase::utils::collection
  -> glob_showcase::utils::math
  -> glob_showcase::utils::string

group_patterns (4)
  -> file_module
  -> nesting
  -> nesting::level1::level2
  -> nesting::level1::level2::level3

inline_modules (2)
  -> file_module
  -> inline_modules::private_inline

inline_modules::inner (1)
  -> file_module

inline_modules::nested::deep (1)
  -> dir_module

inline_modules::outer (1)
  -> inline_modules::outer::file_child

inline_modules::outer::file_child (1)
  -> no_pub_items

item_visibility (1)
  -> reexports

main (23)
  -> advanced_globs
  -> dir_module
  -> dir_module::child_dir
  -> dir_module::child_file
  -> file_module
  -> glob_patterns
  -> glob_patterns::constants
  -> glob_patterns::traits
  -> glob_patterns::types
  -> glob_patterns::utilities
  -> glob_showcase
  -> inline_modules
  -> inline_modules::inner
  -> inline_modules::nested::deep
  -> item_visibility
  -> mixed
  -> mixed::file_child
  -> mixed::inline_child
  -> nesting
  -> nesting::level1::level2::level3
  -> reexports
  -> visibility
  -> visibility::pub_mod

mixed::file_child (2)
  -> custom_path
  -> mixed

mixed::inline_child (1)
  -> mixed::file_child

nesting (2)
  -> inline_modules
  -> inline_modules::nested::deep

nesting::level1 (1)
  -> nesting

nesting::level1::level2 (1)
  -> nesting

nesting::level1::level2::level3 (3)
  -> nesting
  -> nesting::level1
  -> nesting::level1::level2

reexports (4)
  -> file_module
  -> nesting
  -> reexports::internal
  -> reexports::types

reexports::internal (1)
  -> item_visibility

reexports::types (2)
  -> visibility
  -> visibility::pub_mod

uses_empty_glob (1)
  -> no_pub_items

visibility (6)
  -> visibility::inner
  -> visibility::private_mod
  -> visibility::pub_crate_mod
  -> visibility::pub_mod
  -> visibility::pub_super_mod
  -> visibility::restricted_mod

visibility::inner (1)
  -> visibility

visibility::private_mod (1)
  -> nesting::level1::level2::level3

visibility::pub_crate_mod (1)
  -> visibility::pub_mod

visibility::pub_mod (1)
  -> file_module

visibility::pub_super_mod (1)
  -> dir_module

visibility::restricted_mod (1)
  -> nesting

----- stderr -----
