tests/int/deps_command/snapshots/integration__int__deps_command__format__should_deps_grouped_for_own_crate.snap
---
source: tests/int/deps_command/format.rs
info:
  program: crawk
  args:
    - deps
    - "-f"
    - grouped
---
success: true
exit_code: 0
----- stdout -----
analyzer (10)
  -> cache
  -> discover
  -> error
  -> graph
  -> model
  -> module_path
  -> parser
  -> reference
  -> resolve
  -> rules

cli (3)
  -> cli::overview
  -> cli::validation
  -> version

cli::overview (1)
  -> version

discover (1)
  -> cache

discover::module_tree (5)
  -> cache
  -> constants
  -> discover
  -> module_path
  -> utils

error (1)
  -> discover

format::check_cmd (2)
  -> format
  -> lib

format::cycles (2)
  -> format
  -> lib

format::deps_cmd (2)
  -> format
  -> lib

format::list_cmd (1)
  -> lib

format::paths (1)
  -> lib

format::use_cmd (1)
  -> lib

format::why_cmd (1)
  -> lib

graph (5)
  -> error
  -> graph::cycles
  -> graph::edges
  -> graph::orphans
  -> graph::paths

graph::cycles (1)
  -> graph::edges

graph::edges (2)
  -> model
  -> reference

graph::orphans (1)
  -> graph::edges

graph::paths (1)
  -> graph::edges

lib (7)
  -> analyzer
  -> discover
  -> error
  -> graph
  -> model
  -> reference
  -> rules

logger (1)
  -> cli

main (13)
  -> cli
  -> format
  -> format::check_cmd
  -> format::cycles
  -> format::deps_cmd
  -> format::list_cmd
  -> format::orphans
  -> format::paths
  -> format::use_cmd
  -> format::why_cmd
  -> lib
  -> logger
  -> version

model (1)
  -> reference

parser (4)
  -> cache
  -> parser::visitor
  -> reference
  -> utils

parser::visitor (3)
  -> constants
  -> reference
  -> utils

reference (1)
  -> constants

resolve (5)
  -> cache
  -> discover
  -> module_path
  -> reference
  -> utils

rules (4)
  -> graph
  -> module_path
  -> rules::eval
  -> rules::load

rules::eval (3)
  -> graph
  -> module_path
  -> rules

rules::load (3)
  -> error
  -> graph
  -> rules

utils (1)
  -> constants

----- stderr -----
