tests/int/deps_command/snapshots/integration__int__deps_command__format__should_deps_show_apis_depth_1_for_fixture_crate.snap
---
source: tests/int/deps_command/format.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - deps
    - "--show-apis"
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
advanced_globs -> dir_module [greet]
advanced_globs -> file_module [greet]
advanced_globs -> visibility [greet]
app -> advanced_globs
app -> dir_module [greet]
app -> file_module [greet]
app -> glob_patterns [demonstrate_glob_utilities, demonstrate_nested_glob, renamed_special]
app -> glob_showcase
app -> inline_modules [greet, value]
app -> item_visibility [PUB_CONST, PUB_STATIC, PubEnum, PubStruct, PubTrait]
app -> mixed [greet]
app -> nesting [deepest, depth]
app -> reexports
app -> visibility [greet]
baz -> foo
custom_path -> item_visibility [PUB_CONST]
dir_module -> file_module [greet]
dir_module -> inline_modules [value]
file_module -> nesting
glob_patterns -> dir_module [greet]
glob_patterns -> file_module [greet, nesting_depth]
glob_showcase -> file_module
glob_showcase -> inline_modules
glob_showcase -> nesting
group_patterns -> file_module
group_patterns -> nesting [deepest, depth]
inline_modules -> dir_module [greet]
inline_modules -> file_module [greet]
inline_modules -> no_pub_items
item_visibility -> reexports [Foo]
main -> advanced_globs
main -> dir_module [greet]
main -> file_module [greet]
main -> glob_patterns [demonstrate_glob_utilities, demonstrate_nested_glob, renamed_special]
main -> glob_showcase
main -> inline_modules [greet, value]
main -> item_visibility [PUB_CONST, PUB_STATIC, PubEnum, PubStruct, PubTrait]
main -> mixed [greet]
main -> nesting [deepest, depth]
main -> reexports
main -> visibility [greet]
mixed -> custom_path [greet]
nesting -> inline_modules
reexports -> file_module
reexports -> item_visibility [PUB_STATIC]
reexports -> nesting
reexports -> visibility
uses_empty_glob -> no_pub_items
visibility -> dir_module [greet]
visibility -> file_module
visibility -> nesting

----- stderr -----
