tests/int/deps_command/snapshots/integration__int__deps_command__format__should_deps_show_apis_dot_for_fixture_crate.snap
---
source: tests/int/deps_command/format.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - deps
    - "--show-apis"
    - "-f"
    - dot
---
success: true
exit_code: 0
----- stdout -----
digraph dependencies {
    rankdir=LR;
    node [shape=box, style=rounded, fontname="monospace", fontsize=10];
    edge [color="#444444"];

    "advanced_globs";
    "advanced_globs::aliased_module";
    "advanced_globs::enum_variants";
    "advanced_globs::internal";
    "advanced_globs::layer1";
    "advanced_globs::layer1::layer2";
    "advanced_globs::layer1::layer2::layer3";
    "advanced_globs::macro_module";
    "advanced_globs::original";
    "advanced_globs::prelude";
    "advanced_globs::shadowing";
    "advanced_globs::trait_providers";
    "advanced_globs::unix_specific";
    "advanced_globs::windows_specific";
    "app";
    "app_only";
    "baz";
    "crate_root_reexport";
    "custom_path";
    "dir_module";
    "dir_module::child_dir";
    "dir_module::child_file";
    "empty_module";
    "file_module";
    "foo";
    "foo::bar";
    "foo::other";
    "glob_patterns";
    "glob_patterns::constants";
    "glob_patterns::mixed_exports";
    "glob_patterns::outer";
    "glob_patterns::outer::inner";
    "glob_patterns::self_ref";
    "glob_patterns::set_a";
    "glob_patterns::set_b";
    "glob_patterns::traits";
    "glob_patterns::types";
    "glob_patterns::utilities";
    "glob_showcase";
    "glob_showcase::api";
    "glob_showcase::config::all";
    "glob_showcase::config::client";
    "glob_showcase::config::logging";
    "glob_showcase::config::server";
    "glob_showcase::database";
    "glob_showcase::database::connection";
    "glob_showcase::database::query";
    "glob_showcase::database::transaction";
    "glob_showcase::errors";
    "glob_showcase::models";
    "glob_showcase::prelude";
    "glob_showcase::traits";
    "glob_showcase::utils";
    "glob_showcase::utils::collection";
    "glob_showcase::utils::math";
    "glob_showcase::utils::string";
    "group_patterns";
    "inline_modules";
    "inline_modules::inner";
    "inline_modules::nested::deep";
    "inline_modules::outer";
    "inline_modules::outer::file_child";
    "inline_modules::private_inline";
    "item_visibility";
    "lib";
    "main";
    "mixed";
    "mixed::file_child";
    "mixed::inline_child";
    "nesting";
    "nesting::level1";
    "nesting::level1::level2";
    "nesting::level1::level2::level3";
    "no_pub_items";
    "reexports";
    "reexports::internal";
    "reexports::types";
    "uses_empty_glob";
    "visibility";
    "visibility::inner";
    "visibility::private_mod";
    "visibility::pub_crate_mod";
    "visibility::pub_mod";
    "visibility::pub_super_mod";
    "visibility::restricted_mod";

    "advanced_globs" -> "advanced_globs::aliased_module" [label="OriginalStruct, original_name", fontcolor="#c96a00"];
    "advanced_globs" -> "advanced_globs::enum_variants";
    "advanced_globs" -> "advanced_globs::internal";
    "advanced_globs" -> "advanced_globs::layer1";
    "advanced_globs" -> "advanced_globs::macro_module";
    "advanced_globs" -> "advanced_globs::original";
    "advanced_globs" -> "advanced_globs::shadowing" [label="shadowed_func", fontcolor="#c96a00"];
    "advanced_globs" -> "advanced_globs::trait_providers";
    "advanced_globs" -> "advanced_globs::unix_specific";
    "advanced_globs" -> "advanced_globs::windows_specific";
    "advanced_globs" -> "dir_module::child_file" [label="greet", fontcolor="#c96a00"];
    "advanced_globs" -> "file_module" [label="greet", fontcolor="#c96a00"];
    "advanced_globs" -> "visibility";
    "advanced_globs" -> "visibility::pub_mod" [label="greet", fontcolor="#c96a00"];
    "advanced_globs::layer1" -> "advanced_globs::layer1::layer2";
    "advanced_globs::layer1::layer2" -> "advanced_globs::layer1::layer2::layer3";
    "advanced_globs::prelude" -> "advanced_globs" [label="Consumer, MultiImpl, Provider, Transformer, deep_function, layer1_function, layer2_function", fontcolor="#c96a00"];
    "app" -> "advanced_globs";
    "app" -> "app_only" [label="helper_only", fontcolor="#c96a00"];
    "app" -> "dir_module" [label="greet", fontcolor="#c96a00"];
    "app" -> "dir_module::child_dir" [label="greet", fontcolor="#c96a00"];
    "app" -> "dir_module::child_file" [label="greet", fontcolor="#c96a00"];
    "app" -> "file_module" [label="greet", fontcolor="#c96a00"];
    "app" -> "glob_patterns" [label="demonstrate_glob_utilities, demonstrate_nested_glob, renamed_special", fontcolor="#c96a00"];
    "app" -> "glob_patterns::constants";
    "app" -> "glob_patterns::traits";
    "app" -> "glob_patterns::types";
    "app" -> "glob_patterns::utilities";
    "app" -> "glob_showcase";
    "app" -> "inline_modules";
    "app" -> "inline_modules::inner" [label="greet", fontcolor="#c96a00"];
    "app" -> "inline_modules::nested::deep" [label="value", fontcolor="#c96a00"];
    "app" -> "item_visibility" [label="PUB_CONST, PUB_STATIC, PubEnum, PubStruct, PubTrait", fontcolor="#c96a00"];
    "app" -> "mixed" [label="greet", fontcolor="#c96a00"];
    "app" -> "mixed::file_child" [label="greet", fontcolor="#c96a00"];
    "app" -> "mixed::inline_child" [label="greet", fontcolor="#c96a00"];
    "app" -> "nesting";
    "app" -> "nesting::level1::level2::level3" [label="deepest, depth", fontcolor="#c96a00"];
    "app" -> "reexports";
    "app" -> "visibility";
    "app" -> "visibility::pub_mod" [label="greet", fontcolor="#c96a00"];
    "baz" -> "foo::bar";
    "crate_root_reexport" -> "lib" [label="Standalone", fontcolor="#c96a00"];
    "custom_path" -> "item_visibility" [label="PUB_CONST", fontcolor="#c96a00"];
    "custom_path" -> "lib" [label="aliased", fontcolor="#c96a00"];
    "dir_module" -> "inline_modules::nested::deep" [label="value", fontcolor="#c96a00"];
    "dir_module::child_dir" -> "file_module" [label="greet", fontcolor="#c96a00"];
    "dir_module::child_file" -> "dir_module" [label="greet", fontcolor="#c96a00"];
    "file_module" -> "nesting" [label="depth", fontcolor="#c96a00"];
    "foo" -> "foo::bar" [label="public_fn", fontcolor="#c96a00"];
    "foo::other" -> "foo::bar";
    "glob_patterns" -> "dir_module";
    "glob_patterns" -> "dir_module::child_file" [label="greet", fontcolor="#c96a00"];
    "glob_patterns" -> "file_module" [label="greet, nesting_depth", fontcolor="#c96a00"];
    "glob_patterns" -> "glob_patterns::constants";
    "glob_patterns" -> "glob_patterns::mixed_exports" [label="func_one, func_three, func_two, special_function", fontcolor="#c96a00"];
    "glob_patterns" -> "glob_patterns::outer";
    "glob_patterns" -> "glob_patterns::self_ref";
    "glob_patterns" -> "glob_patterns::set_a";
    "glob_patterns" -> "glob_patterns::set_b";
    "glob_patterns" -> "glob_patterns::traits";
    "glob_patterns" -> "glob_patterns::types";
    "glob_patterns" -> "glob_patterns::utilities";
    "glob_patterns::outer" -> "glob_patterns::outer::inner";
    "glob_showcase" -> "file_module";
    "glob_showcase" -> "glob_showcase::api";
    "glob_showcase" -> "glob_showcase::config::all";
    "glob_showcase" -> "glob_showcase::database";
    "glob_showcase" -> "glob_showcase::errors";
    "glob_showcase" -> "glob_showcase::models";
    "glob_showcase" -> "glob_showcase::traits";
    "glob_showcase" -> "glob_showcase::utils::collection";
    "glob_showcase" -> "glob_showcase::utils::math";
    "glob_showcase" -> "glob_showcase::utils::string";
    "glob_showcase" -> "inline_modules";
    "glob_showcase" -> "nesting::level1::level2";
    "glob_showcase::config::all" -> "glob_showcase::config::client";
    "glob_showcase::config::all" -> "glob_showcase::config::logging";
    "glob_showcase::config::all" -> "glob_showcase::config::server";
    "glob_showcase::database" -> "glob_showcase::database::connection";
    "glob_showcase::database" -> "glob_showcase::database::query";
    "glob_showcase::database" -> "glob_showcase::database::transaction";
    "glob_showcase::prelude" -> "glob_showcase" [label="ErrorKind, Status", fontcolor="#c96a00"];
    "glob_showcase::prelude" -> "glob_showcase::api" [label="delete_data, get_data, set_data", fontcolor="#c96a00"];
    "glob_showcase::prelude" -> "glob_showcase::database" [label="connect, disconnect, execute", fontcolor="#c96a00"];
    "glob_showcase::prelude" -> "glob_showcase::errors" [label="NotFoundError, ValidationError", fontcolor="#c96a00"];
    "glob_showcase::prelude" -> "glob_showcase::models" [label="Comment, Post, User", fontcolor="#c96a00"];
    "glob_showcase::prelude" -> "glob_showcase::traits" [label="Identifiable, Nameable, Validatable", fontcolor="#c96a00"];
    "glob_showcase::prelude" -> "glob_showcase::utils::math" [label="add, subtract", fontcolor="#c96a00"];
    "glob_showcase::utils" -> "glob_showcase::utils::collection";
    "glob_showcase::utils" -> "glob_showcase::utils::math" [label="add, divide, multiply, subtract", fontcolor="#c96a00"];
    "glob_showcase::utils" -> "glob_showcase::utils::string" [label="lowercase, uppercase", fontcolor="#c96a00"];
    "group_patterns" -> "file_module";
    "group_patterns" -> "nesting";
    "group_patterns" -> "nesting::level1::level2";
    "group_patterns" -> "nesting::level1::level2::level3" [label="deepest, depth", fontcolor="#c96a00"];
    "inline_modules" -> "file_module" [label="greet", fontcolor="#c96a00"];
    "inline_modules" -> "inline_modules::private_inline" [label="_secret", fontcolor="#c96a00"];
    "inline_modules::inner" -> "file_module" [label="greet", fontcolor="#c96a00"];
    "inline_modules::nested::deep" -> "dir_module" [label="greet", fontcolor="#c96a00"];
    "inline_modules::outer" -> "inline_modules::outer::file_child" [label="greet", fontcolor="#c96a00"];
    "inline_modules::outer::file_child" -> "no_pub_items" [label="exercise_private", fontcolor="#c96a00"];
    "item_visibility" -> "reexports" [label="Foo", fontcolor="#c96a00"];
    "lib" -> "empty_module" [label="Standalone", fontcolor="#c96a00"];
    "main" -> "advanced_globs";
    "main" -> "dir_module" [label="greet", fontcolor="#c96a00"];
    "main" -> "dir_module::child_dir" [label="greet", fontcolor="#c96a00"];
    "main" -> "dir_module::child_file" [label="greet", fontcolor="#c96a00"];
    "main" -> "file_module" [label="greet", fontcolor="#c96a00"];
    "main" -> "glob_patterns" [label="demonstrate_glob_utilities, demonstrate_nested_glob, renamed_special", fontcolor="#c96a00"];
    "main" -> "glob_patterns::constants";
    "main" -> "glob_patterns::traits";
    "main" -> "glob_patterns::types";
    "main" -> "glob_patterns::utilities";
    "main" -> "glob_showcase";
    "main" -> "inline_modules";
    "main" -> "inline_modules::inner" [label="greet", fontcolor="#c96a00"];
    "main" -> "inline_modules::nested::deep" [label="value", fontcolor="#c96a00"];
    "main" -> "item_visibility" [label="PUB_CONST, PUB_STATIC, PubEnum, PubStruct, PubTrait", fontcolor="#c96a00"];
    "main" -> "mixed" [label="greet", fontcolor="#c96a00"];
    "main" -> "mixed::file_child" [label="greet", fontcolor="#c96a00"];
    "main" -> "mixed::inline_child" [label="greet", fontcolor="#c96a00"];
    "main" -> "nesting";
    "main" -> "nesting::level1::level2::level3" [label="deepest, depth", fontcolor="#c96a00"];
    "main" -> "reexports";
    "main" -> "visibility";
    "main" -> "visibility::pub_mod" [label="greet", fontcolor="#c96a00"];
    "mixed::file_child" -> "custom_path" [label="greet", fontcolor="#c96a00"];
    "mixed::file_child" -> "mixed" [label="greet", fontcolor="#c96a00"];
    "mixed::inline_child" -> "mixed::file_child" [label="greet", fontcolor="#c96a00"];
    "nesting" -> "inline_modules";
    "nesting" -> "inline_modules::nested::deep" [label="value", fontcolor="#c96a00"];
    "nesting::level1" -> "nesting" [label="depth", fontcolor="#c96a00"];
    "nesting::level1::level2" -> "nesting" [label="depth", fontcolor="#c96a00"];
    "nesting::level1::level2::level3" -> "nesting" [label="depth", fontcolor="#c96a00"];
    "nesting::level1::level2::level3" -> "nesting::level1" [label="depth", fontcolor="#c96a00"];
    "nesting::level1::level2::level3" -> "nesting::level1::level2" [label="depth", fontcolor="#c96a00"];
    "reexports" -> "file_module" [label="greet", fontcolor="#c96a00"];
    "reexports" -> "nesting" [label="depth", fontcolor="#c96a00"];
    "reexports" -> "reexports::internal" [label="Baz, Foo, INTERNAL_CONST_A, INTERNAL_CONST_B, InternalEnum, InternalTrait, Qux, Secret, internal_helper_1, internal_helper_2", fontcolor="#c96a00"];
    "reexports" -> "reexports::types";
    "reexports::internal" -> "item_visibility" [label="PUB_STATIC", fontcolor="#c96a00"];
    "reexports::types" -> "visibility";
    "reexports::types" -> "visibility::pub_mod" [label="greet", fontcolor="#c96a00"];
    "uses_empty_glob" -> "no_pub_items";
    "visibility" -> "visibility::inner" [label="uses_restricted", fontcolor="#c96a00"];
    "visibility" -> "visibility::private_mod" [label="deepest_greet, greet", fontcolor="#c96a00"];
    "visibility" -> "visibility::pub_crate_mod" [label="greet, parent_greet", fontcolor="#c96a00"];
    "visibility" -> "visibility::pub_mod" [label="greet", fontcolor="#c96a00"];
    "visibility" -> "visibility::pub_super_mod" [label="dir_module_greet, greet", fontcolor="#c96a00"];
    "visibility" -> "visibility::restricted_mod" [label="RestrictedConfig, VERSION, greet, nesting_depth", fontcolor="#c96a00"];
    "visibility::inner" -> "visibility";
    "visibility::private_mod" -> "nesting::level1::level2::level3";
    "visibility::pub_crate_mod" -> "visibility::pub_mod" [label="greet", fontcolor="#c96a00"];
    "visibility::pub_mod" -> "file_module" [label="greet", fontcolor="#c96a00"];
    "visibility::pub_super_mod" -> "dir_module" [label="greet", fontcolor="#c96a00"];
    "visibility::restricted_mod" -> "nesting" [label="depth", fontcolor="#c96a00"];
}

----- stderr -----
